fixed bug with mobile overflow

--- a/src/styles/sass/_apiResultsBcg.scss
+++ b/src/styles/sass/_apiResultsBcg.scss
@@ -57,6 +57,12 @@
         transition: transform .2s ease-in;
         transform: translateX(-100%);
 
+        @media screen and (max-width: 726px) {
+            margin-top: 75px;
+            font-size: 25px;
+            width: 140px;
+        }
+
     }
 
     &__cards {
@@ -76,6 +82,10 @@
             height: 270px;
             visibility: visible;
             margin: 1.3rem;
+
+            @media screen and (max-width: 726px) {
+                margin: 1.3rem 0;
+            }
 
             &__svg {
                 position: absolute;
@@ -187,6 +197,7 @@
             background-position: 100% 0;
             background-size: 200% 100%;
             transition: all .25s ease-in;
+            z-index: 9999;
 
             &:hover {
                 background-position: 0 0;
@@ -272,4 +283,8 @@
     width: inherit;
     font-family: $font1;
     transform: translateX(25%);
+
+    @media screen and (max-width: 726px) {
+        font-size: 25px;
+    }
 }
